--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  @apply bg-gray-100 dark:bg-gray-900;
+}
+
