--- a/src/app/components/dynamic-modal/dynamic-modal.component.html
+++ b/src/app/components/dynamic-modal/dynamic-modal.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="show" class="fixed inset-0 flex items-center justify-center z-50">
-  <div class="absolute inset-0 bg-[#0000002e] backdrop-blur-sm"></div>
+  <div class="absolute inset-0 bg-[#0000002e] backdrop-blur-sm" (click)="closeModal()"></div>
 
   <div class="relative bg-white p-6 rounded-lg shadow-lg w-4/5 max-w-none z-10">
     <h2 class="text-xl font-bold mb-4">{{ title }}</h2>
@@ -8,38 +8,76 @@
       <div *ngFor="let field of fields">
         <label class="block text-gray-700">{{ field.label }}</label>
         <ng-container [ngSwitch]="field.type">
-          <input *ngSwitchCase="'text'" [name]="field.name" [placeholder]="field.placeholder" [(ngModel)]="field.value"
+          <input *ngSwitchCase="'text'" [name]="field.name" [placeholder]="field.placeholder" [(ngModel)]="field.value" [disabled]="field.disable"
                  class="border border-gray-300 rounded-md px-4 py-2 w-full"
-                 [appMask]="field.label === 'CPF' ? 'cpf' : (field.label === 'Phone' ? 'phone' : '')"
-                 [maxlength]="field.label === 'CPF' ? 14 : null" required />
+                 [appMask]="field.label === 'CPF' ? 'cpf' : field.label === 'CRM' ? 'crm' : ''"
+                 [maxlength]="field.label === 'CPF' ? 14  : field.label === 'CRM' ? 9 : null"
+                 required />
 
           <input *ngSwitchCase="'tel'" [name]="field.name" [placeholder]="field.placeholder" [(ngModel)]="field.value" type="tel"
                  class="border border-gray-300 rounded-md px-4 py-2 w-full"
-                 [appMask]="'phone'"
+                 [appMask]="field.label === 'Celular' ? 'telephone' : ''"
                  maxlength="15" required />
 
-          <input *ngSwitchCase="'date'" [name]="field.name" [(ngModel)]="field.value" type="date"
+          <input *ngSwitchCase="'date'" [name]="field.name" [(ngModel)]="field.value" type="date" [disabled]="field.disable"
                  class="border border-gray-300 rounded-md px-4 py-2 w-full" required />
 
           <input *ngSwitchCase="'email'" [name]="field.name" [placeholder]="field.placeholder" [(ngModel)]="field.value" type="email"
                  class="border border-gray-300 rounded-md px-4 py-2 w-full" required />
 
+          <div *ngSwitchCase="'password'" class="relative">
+            <input [name]="field.name"
+                   [placeholder]="field.placeholder"
+                   [(ngModel)]="field.value"
+                   [type]="showPassword ? 'text' : 'password'"
+                   class="border border-gray-300 rounded-md px-4 py-2 w-full" required />
+            <button type="button"
+                    (click)="togglePasswordVisibility()"
+                    class="absolute inset-y-0 right-0 flex items-center pr-3 text-gray-400 focus:outline-none">
+              <svg *ngIf="!showPassword" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 cursor-pointer" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+                <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+              </svg>
+              <svg *ngIf="showPassword" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 cursor-pointer" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M3.707 2.293a1 1 0 00-1.414 1.414l14 14a1 1 0 001.414-1.414l-1.473-1.473A10.014 10.014 0 0019.542 10C18.268 5.943 14.478 3 10 3a9.958 9.958 0 00-4.512 1.074l-1.78-1.781zm4.261 4.26l1.514 1.515a2.003 2.003 0 012.45 2.45l1.514 1.514a4 4 0 00-5.478-5.478z" clip-rule="evenodd" />
+                <path d="M12.454 16.697L9.75 13.992a4 4 0 01-3.742-3.741L2.335 6.578A9.98 9.98 0 00.458 10c1.274 4.057 5.065 7 9.542 7 .847 0 1.669-.105 2.454-.303z" />
+              </svg>
+            </button>
+          </div>
+
+          <input *ngSwitchCase="'time'" [name]="field.name" [placeholder]="field.placeholder" [(ngModel)]="field.value" type="time"
+                 class="border border-gray-300 rounded-md px-4 py-2 w-full" required />
+
           <div *ngSwitchCase="'radio'" class="flex items-center space-x-4">
             <label *ngFor="let option of field.options">
-              <input type="radio" name="status" [(ngModel)]="field.value" [value]="option.value" class="mr-2" required>
+              <input type="radio" [name]="field.name" [(ngModel)]="field.value" [value]="option.value" class="mr-2" required>
               {{ option.label }}
             </label>
           </div>
+
+          <input *ngSwitchCase="'search'" [name]="field.name" [placeholder]="field.placeholder" [(ngModel)]="field.value" type="search"
+                 class="border border-gray-300 rounded-md px-4 py-2 w-full" required />
+
+          <div *ngSwitchCase="'select'">
+            <select [name]="field.name" [(ngModel)]="field.value" [disabled]="field.disable"
+                    class="border border-gray-300 rounded-md px-4 py-2 w-full" required>
+              <option value="" disabled selected>{{ field.placeholder }}</option>
+              <option *ngFor="let option of field.options" [value]="option.value">
+                {{ option.label }}
+              </option>
+            </select>
+          </div>
+
         </ng-container>
       </div>
     </div>
 
     <div class="flex justify-end space-x-2 mt-4">
-      <button (click)="closeModal()" class="px-4 py-2 bg-gray-300 rounded-md hover:bg-gray-400 transition">
-        Cancelar
+      <button (click)="closeModal()" class="px-4 py-2 bg-gray-300 rounded-md hover:bg-gray-400 transition cursor-pointer">
+        {{ isViewMode ? 'Voltar' : 'Cancelar' }}
       </button>
-      <button (click)="saveData()"
-              class="px-4 py-2 bg-[#38b593] text-white rounded-md hover:bg-[#2a9577] transition">
+      <button *ngIf="!isViewMode" (click)="onSaveClick()"
+              class="px-4 py-2 bg-[#38b593] text-white rounded-md hover:bg-[#2a9577] transition cursor-pointer">
         Salvar
       </button>
     </div>
