--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -66,7 +66,7 @@
               >
               <label for="remember" class="ml-2 text-gray-600">Lembre de mim</label>
             </div>
-            <a href="#" class="text-[#38b593] hover:underline">Esqueceu sua senha?</a>
+<!--            <a href="#" class="text-[#38b593] hover:underline">Esqueceu sua senha?</a>-->
           </div>
 
           <button
