refactor: Ajustes de css.

--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -29,13 +29,13 @@
         <span *ngSwitchCase="'status'" [class]="'px-3 py-1 rounded-full ' + getStatusClass(item[column.key])">
           {{ item[column.key] }}
         </span>
-            <div *ngSwitchCase="'action'" class="flex space-x-3">
-              <button (click)="onEdit(item); $event.stopPropagation()" class="text-[#38b593] hover:text-[#2a9577] cursor-pointer">
+            <div *ngSwitchCase="'action'" class="flex">
+              <button (click)="onEdit(item); $event.stopPropagation()" class="text-[#38b593] hover:text-[#2a9577] cursor-pointer me-3">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
                 </svg>
               </button>
-              <button (click)="onDelete(item); $event.stopPropagation()" class="text-red-500 hover:text-red-700 cursor-pointer">
+              <button (click)="onDelete(item); $event.stopPropagation()" class="text-red-500 hover:text-red-700 cursor-pointer me-3">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                 </svg>
@@ -73,10 +73,10 @@
         {{ Math.min(currentPage * itemsPerPage, filteredData.length) }} de
         {{ filteredData.length }} pacientes cadastrados
       </div>
-      <div class="flex space-x-1">
+      <div class="flex">
         <button [disabled]="currentPage === 1"
                 (click)="currentPage = currentPage - 1"
-                class="px-3 py-1 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-200 cursor-pointer">
+                class="px-3 py-1 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-200 cursor-pointer me-1">
           Anterior
         </button>
         <button *ngFor="let page of pages"
@@ -84,7 +84,7 @@
                 [class.text-white]="page === currentPage"
                 [class.hover:bg-gray-200]="page !== currentPage"
                 (click)="currentPage = page"
-                class="px-3 py-1 rounded-md text-sm font-medium hover:bg-gray-200 cursor-pointer">
+                class="px-3 py-1 rounded-md text-sm font-medium hover:bg-gray-200 cursor-pointer me-1">
           {{page}}
         </button>
         <button [disabled]="currentPage === pages.length"
