--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-screen">
+<div class="flex h-screen bg-gray-50">
   <app-sidebar *ngIf="!isLoginPage" (collapsedChange)="toggleSidebar($event)"></app-sidebar>
 
   <div
