--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -4,10 +4,23 @@
   <div class="flex justify-between items-center mb-4">
     <input type="search" [(ngModel)]="searchTerm" placeholder="Buscar..."
            class="border border-gray-300 rounded-md px-4 py-2 w-1/3" />
+
+    <button *ngIf="selectedTab === 'Consulta'"
+            (click)="toggleTodayFilter()"
+            class="bg-[#38b593] text-white px-4 py-2 rounded-md hover:bg-[#2a9577] transition cursor-pointer flex justify-center items-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 me-2" fill="none"
+           viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M8 7V3m8 4V3m-9 8h10m-12 4h12M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+      </svg>
+      {{ onlyToday ? 'Mostrar Tudo' : 'Filtrar Consultas de Hoje' }}
+    </button>
+
     <button (click)="onAddClick()"
             class="bg-[#38b593] text-white px-4 py-2 rounded-md hover:bg-[#2a9577] transition cursor-pointer">
       + Adicionar {{ selectedTab }}
     </button>
+
   </div>
   <div class="bg-white rounded-lg shadow overflow-hidden">
     <table class="min-w-full">
@@ -23,25 +36,25 @@
       <!-- Table Body -->
       <tbody class="divide-y divide-gray-200">
       <tr *ngFor="let item of paginatedData" class="hover:bg-gray-50">
-        <td *ngFor="let column of columns" class="px-4 py-4 text-sm cursor-pointer"
+        <td *ngFor="let column of columns" class="px-4 py-4 text-sm cursor-pointer" title="Visualizar Dados"
             (click)="onView(item, $event)">
           <ng-container [ngSwitch]="column.type">
         <span *ngSwitchCase="'status'" [class]="'px-3 py-1 rounded-full ' + getStatusClass(item[column.key])">
           {{ item[column.key] }}
         </span>
             <div *ngSwitchCase="'action'" class="flex">
-              <button (click)="onEdit(item); $event.stopPropagation()" class="text-[#38b593] hover:text-[#2a9577] cursor-pointer me-3">
+              <button (click)="onEdit(item); $event.stopPropagation()" class="text-[#38b593] hover:text-[#2a9577] cursor-pointer me-3" title="Editar">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
                 </svg>
               </button>
-              <button (click)="onDelete(item); $event.stopPropagation()" class="text-red-500 hover:text-red-700 cursor-pointer me-3">
+              <button (click)="onDelete(item); $event.stopPropagation()" class="text-red-500 hover:text-red-700 cursor-pointer me-3" title="Excluir">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                 </svg>
               </button>
               <button *ngIf="selectedTab === 'Consulta'"
-                      (click)="onSendMessage(item); $event.stopPropagation()" class="text-green-500 hover:text-green-700 cursor-pointer">
+                      (click)="onSendMessage(item); $event.stopPropagation()" class="text-green-500 hover:text-green-700 cursor-pointer" title="Enviar Mensagem">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
                   <path d="M12.04 2c-5.52 0-10 4.48-10 10 0 1.78.47 3.44 1.28 4.88L2 22l5.33-1.4c1.44.78 3.1 1.22 4.72 1.22 5.52 0 10-4.48 10-10s-4.48-10-10-10zm0 18c-1.46 0-2.84-.38-4.04-1.08l-.28-.16-3.16.84.84-3.08-.18-.28A8.11 8.11 0 0 1 4 12c0-4.4 3.6-8 8-8s8 3.6 8 8-3.6 8-8 8zm4.58-5.94c-.25-.12-1.46-.72-1.7-.8-.23-.09-.4-.12-.56.12s-.64.8-.8.96c-.15.16-.3.18-.55.06-.25-.12-1.04-.38-1.98-1.18-.73-.63-1.23-1.42-1.38-1.67-.15-.26-.02-.4.11-.54.12-.12.25-.3.38-.44s.18-.25.27-.42c.09-.18.05-.32-.02-.44-.07-.12-.56-1.36-.77-1.87-.2-.48-.41-.42-.56-.43-.15-.02-.3-.02-.46-.02a.89.89 0 0 0-.64.3c-.22.24-.84.82-.84 2s.86 2.32.98 2.48c.12.16 1.7 2.58 4.1 3.64 1.47.63 2.04.69 2.78.58.42-.06 1.46-.6 1.67-1.18.21-.58.21-1.08.15-1.18s-.23-.17-.48-.29z"/>
                 </svg>
