refactor: Ajuste na resposta para dados não encontrados.

--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -68,7 +68,7 @@
         <td colspan="5" class="text-center py-6">
           <div class="flex flex-col items-center justify-center text-gray-500">
             <i class="bi bi-search text-5xl"></i>
-            <p class="mt-4 mb-0 text-base text-gray-700">Nenhum(a) {{ selectedTab }} encontrado</p>
+            <p class="mt-4 mb-0 text-base text-gray-700">Nenhum(a) {{ selectedTab }} encontrado(a)</p>
             <small *ngIf="searchTerm; else newRegister">Tente ajustar sua pesquisa</small>
             <ng-template #newRegister>
               <small>Cadastre um(a) novo(a) {{ selectedTab }} para começar</small>
