refactor: Ajuste de conteúdo escrito que estava errado.

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="mt-4 text-sm text-[#38B593]">
-          +{{getGrowthRate(dashboardData.patients)}}% from last month
+          +{{getGrowthRate(dashboardData.patients)}}% do mês passado
         </div>
       </div>
 
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="mt-4 text-sm text-[#38B593]">
-          +{{getGrowthRate(dashboardData.doctors)}}% from last month
+          +{{getGrowthRate(dashboardData.doctors)}}% do mês passado
         </div>
       </div>
 
