refactor: Ajuste de direção do botão de fechamento da barra de navegação.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -105,7 +105,7 @@
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
-      [class]="'h-4 w-4 transform ' + (isCollapsed ? '' : 'rotate-180')"
+      [class]="'h-4 w-4 transform transition-transform duration-300 ' + (isCollapsed ? 'rotate-180' : '')"
       viewBox="0 0 20 20"
       fill="currentColor"
     >
